button link was too long flexstart fixed it, added personal text to website

--- a/styles/style.css
+++ b/styles/style.css
@@ -860,6 +860,7 @@ nav {
 .skillsLookingFor {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 16px;
     margin-top: 8px;
 }
